# http-server-c

./: .clangd  .gitignore  CMakeLists.txt  Makefile  build.sh
include/: app_string.h  buffer.h  definition.h  error_number.h
src/: app_string.c  buffer.c  definition.c  error_number.c  main.c  main.c~
test/: index.html
